style: fixes