@@ -1,7 +1,6 @@
 package ru.yandex.practicum.filmorate.advice;
 
 import jakarta.validation.ValidationException;
-
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.HttpStatusCode;
@@ -17,7 +16,6 @@ import ru.yandex.practicum.filmorate.exception.EntityNotFoundException;
 import ru.yandex.practicum.filmorate.model.ApiError;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Объединённый обработчик всех исключений проекта.
@@ -29,7 +27,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      * Точка входа для всех внутренних ошибок Spring MVC.
      */
     @Override
-    protected ResponseEntity<Object> handleExceptionInternal(
+    public ResponseEntity<Object> handleExceptionInternal(
             Exception ex,
             Object body,
             HttpHeaders headers,
@@ -47,7 +45,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      * Валидация @Valid в контроллерах.
      */
     @Override
-    protected ResponseEntity<Object> handleMethodArgumentNotValid(
+    public ResponseEntity<Object> handleMethodArgumentNotValid(
             MethodArgumentNotValidException ex,
             HttpHeaders headers,
             HttpStatusCode statusCode,
@@ -57,7 +55,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(err -> err.getField() + ": " + err.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         ApiError apiError = new ApiError(
                 HttpStatus.BAD_REQUEST.value(),
@@ -74,7 +72,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
      * Некорректный JSON в теле запроса.
      */
     @Override
-    protected ResponseEntity<Object> handleHttpMessageNotReadable(
+    public ResponseEntity<Object> handleHttpMessageNotReadable(
             HttpMessageNotReadableException ex,
             HttpHeaders headers,
             HttpStatusCode statusCode,
@@ -100,7 +98,7 @@ public class GlobalExceptionHandler extends ResponseEntityExceptionHandler {
                 .getFieldErrors()
                 .stream()
                 .map(err -> err.getField() + ": " + err.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
         ApiError apiError = new ApiError(
                 HttpStatus.BAD_REQUEST.value(),
